@@ -1,7 +1,7 @@
 package Class::Usul::Cmd;
 
 use 5.010001;
-use version; our $VERSION = qv( sprintf '0.1.%d', q$Rev: 3 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.1.%d', q$Rev: 4 $ =~ /\d+/gmx );
 
 use Class::Usul::Cmd::Constants qw( TRUE );
 use Class::Usul::Cmd::Types     qw( ConfigProvider Localiser Logger );
